app running with gulp and bower

--- a/app/partials/characterPage.html
+++ b/app/partials/characterPage.html
@@ -2,6 +2,7 @@
     <head>
         <script type='text/javascript' src='//cdnjs.cloudflare.com/ajax/libs/angular.js/1.2.20/angular.min.js'></script>
         <script src="charactersController.js"></script>
+        <title>Batman Characters</title>
         <style>
             table, th, td { 
                 border: 1px solid grey;
