fixed hash reference for character page

--- a/app/partials/characterList.html
+++ b/app/partials/characterList.html
@@ -16,7 +16,7 @@
     </tr>
     <tr ng-repeat="character in characters" id="{{character.link}}">
         <td>
-            <a href="character/{{character.characterName}}">{{ character.characterName }}</a>
+            <a href="/#/character/{{character.characterName}}">{{ character.characterName }}</a>
         </td>
         <td>{{ character.realName }}</td>
         <td>{{ character.description }}</td>
