--- a/app/partials/characterPage.html
+++ b/app/partials/characterPage.html
@@ -1,1 +1,11 @@
-{{ character.characterName }}
+<h1 align="center">
+    <a ng-href="http://batman.wikia.com/wiki/{{character.link}}">{{character.characterName}}</a>
+    </br>
+</h1>
+<div style="float:left; width:35%">
+    <img ng-src="{{character.image}}" style="width: 100%; height: 100%"/>
+</div>
+<div style="float:right; width:65%">
+    <h3>Real Name: {{ character.realName }}</h3>   
+    <p>{{ character.description }}</p>
+</div>
