adding go to character page

--- a/app/partials/characterList.html
+++ b/app/partials/characterList.html
@@ -3,7 +3,7 @@
     <a href="http://batman.wikia.com/wiki/Category:Characters">Batman Characters</a>
     </br>
 </h1>
-<a class="title_links" href="" ng-click="jumpToId(character.link)" ng-repeat="character in characters">
+<a class="title_links" href="" ng-click="goToCharacterPage(character.characterName)" ng-repeat="character in characters">
     {{ character.characterName }} 
 </a>
 
