moved batman header stuff to index page

--- a/app/partials/characterPage.html
+++ b/app/partials/characterPage.html
@@ -1,7 +1,7 @@
-<h1 align="center">
+<h2 align="left">
     <a ng-href="http://batman.wikia.com/wiki/{{character.link}}">{{character.characterName}}</a>
     </br>
-</h1>
+</h2>
 <div style="float:left; width:35%">
     <img ng-src="{{character.image}}" style="width: 100%; height: 100%"/>
 </div>
